--- a/style.css
+++ b/style.css
@@ -1,38 +1,45 @@
-
-
-ul {
-    list-style-type: none;
-    margin: -12px -8px;
-    padding: 12px 8px;
-    background-image: url(assets/images/hero.png);
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    
-   
-
+header ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 12px 8px;
+  background-image: url(assets/images/hero.png);
+  height: 500px;
+  width: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
 }
 
-li {
-    display: inline;
-    
-    
+header ul li {
+  display: inline-block;
+  margin: 10px;
+  float: inline-end;
 }
 #logoDiv {
-    width: 100px;
-    float: left;
-
+  width: 100px;
+  float: left;
 }
 
-button {
-    opacity: 25%;
-    border-bottom: initial;
-    border: none;
+.buttonExpand {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  height: 50px;
+  width: 200px;
+  color: white;
+  font-size: 1.5em;
+}
+
+.headerBar {
+  display: flex;
+  justify-content: right;
+  background-color: black;
+  color: white;
 }
 
 body {
-    background-color: ivory;
+  margin: 0;
+  padding: 0;
+  background-color: ivory;
 }
-
